refactor(controllers): added swaggerUi annotations for API documentation